style changes  commit

--- a/starApp/src/app/planets/planets.component.html
+++ b/starApp/src/app/planets/planets.component.html
@@ -1,6 +1,6 @@
 
 <div *ngFor="let planet of planets" >
-  <app-planet-card [planet]="planet" class="abc"></app-planet-card>
+  <app-planet-card [planet]="planet"></app-planet-card>
 </div>
 
 <div class="pagination">
